# c-practise

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: main.c
src/core/: font_loader.c  font_loader.h
src/ds/: ds.h  hm.c  hm.h  my_array.c  my_array.h
src/entities/: button_panel_entity.c  entity.c  entity.h  global_select_entity.c  keyboard_event_listener_entity.c  object_entity.h  quad_link_entity.c  quad_select_entity.c  square_entity.c
src/state/: state.h
src/utils/: helper.c  helper.h
